--- a/book-meeting.conf
+++ b/book-meeting.conf
@@ -6,7 +6,7 @@ server {
 
 	location / {
 		include /etc/nginx/uwsgi_params;
-		uwsgi_pass unix///www/uwsgi.sock;
+		uwsgi_pass unix:///www/uwsgi.sock;
 	}
 
 	location /static {
